# Mi-GAN

./: .gitignore  README.md  pyproject.toml  setup.cfg
Mi_GAN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: inference_config.yaml  preprocess_config.yaml  test_config.yaml  train_config.yaml
mi_gan/models/: __init__.py  base_model.py  microscopy_model.py  networks.py  test_model.py
mi_gan/options/: base_options.py  test_options.py  train_options.py
mi_gan/utils/: config_utils.py  data_utils.py  print_utils.py  visualization.py
scripts/: create_dataset.py  inference.py  preprocess.py  test.py  train.py
