[metadata]
name = Mi-GAN
version = 0.1.0
author = Lara Fadel
author_email = larafade@usc.edu
description = A GAN-based model for microscopy image denoising
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.9.0
    torchvision>=0.10.0
    numpy
    Pillow
    pyyaml
    tensorboard
    tqdm
